WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104393
Captions menu doesn't update to track changes
https://bugs.webkit.org/show_bug.cgi?id=104393
Summary
Captions menu doesn't update to track changes
Eric Carlson
Reported
2012-12-07 12:53:01 PST
The captions menu isn't always updated when text tracks are added or removed.
Attachments
Proposed patch
(15.86 KB, patch)
2012-12-07 13:16 PST
,
Eric Carlson
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-12-07 12:53:48 PST
<
rdar://problem/12838075
>
Eric Carlson
Comment 2
2012-12-07 13:16:59 PST
Created
attachment 178262
[details]
Proposed patch
Dean Jackson
Comment 3
2012-12-07 13:21:22 PST
Comment on
attachment 178262
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=178262&action=review
> LayoutTests/media/video-controls-captions-trackmenu.html:88 > + window.setTimeout(function() { testMenu(5); nextStep(); }, 100);
You don't take a parameter in testMenu()
Eric Carlson
Comment 4
2012-12-07 13:32:34 PST
http://trac.webkit.org/changeset/136978
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug