Captions menu doesn't update to track changes https://bugs.webkit.org/show_bug.cgi?id=104393

Reviewed by Dean Jackson.

Source/WebCore:

Flag the captions menu as needing an update when tracks are added or removed. Don't actually
change the menu until it needs to be displayed.

No new tests, media/video-controls-captions-trackmenu.html was updated to test this.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::addTextTrack): Call closedCaptionTracksChanged().
(WebCore::HTMLMediaElement::didRemoveTrack): Ditto.
(WebCore::HTMLMediaElement::configureTextTracks): Ditto.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlClosedCaptionsTrackListElement::MediaControlClosedCaptionsTrackListElement):
    Intialize m_trackListHasChanged.
(WebCore::MediaControlClosedCaptionsTrackListElement::updateDisplay): Call rebuildTrackListMenu if
    the track list has changed.
(WebCore::MediaControlClosedCaptionsTrackListElement::rebuildTrackListMenu): Renamed from resetTrackListMenu.
* html/shadow/MediaControlElements.h:
(WebCore::MediaControlClosedCaptionsTrackListElement::resetTrackListMenu): Just set m_trackListHasChanged.

* html/shadow/MediaControls.h:
(WebCore::MediaControls::closedCaptionTracksChanged): New, do nothing for base class.

* html/shadow/MediaControlsApple.cpp:
(WebCore::MediaControlsApple::toggleClosedCaptionTrackList): Update the track list before
    showing it.
(WebCore::MediaControlsApple::closedCaptionTracksChanged):
* html/shadow/MediaControlsApple.h:

LayoutTests:

Test to ensure that the captions menu is updated as tracks added and removed.

* media/video-controls-captions-trackmenu-expected.txt:
* media/video-controls-captions-trackmenu.html:


Canonical link: https://commits.webkit.org/122552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136978 268f45cc-cd09-0410-ab3c-d52691b4dbfc